Fix setup.py for Python 2 and test in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
   - pip install pytest
 script:
   - python -m pytest tests
+  - python setup.py sdist
 cache: pip
 notifications:
   email: false
