--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,7 @@ environment:
     - PYTHON: "C:\\Python27-x64"
     - PYTHON: "C:\\Python35-x64"
     - PYTHON: "C:\\Python36-x64"
+build: off
 install:
   - "%PYTHON%\\python.exe -m pip install pytest"
 test_script:
