--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,14 +17,35 @@ jobs:
       Python27Windows:
         imageName: 'vs2017-win2016'
         python.version: '2.7'
+      Python27Mac:
+        imageName: 'macos-10.13'
+        python.version: '2.7'
       Python35Linux:
         imageName: 'ubuntu-16.04'
+        python.version: '3.5'
+      Python35Windows:
+        imageName: 'vs2017-win2016'
+        python.version: '3.5'
+      Python35Mac:
+        imageName: 'macos-10.13'
         python.version: '3.5'
       Python36Linux:
         imageName: 'ubuntu-16.04'
         python.version: '3.6'
+      Python36Windows:
+        imageName: 'vs2017-win2016'
+        python.version: '3.6'
+      Python36Mac:
+        imageName: 'macos-10.13'
+        python.version: '3.6'
       Python37Linux:
         imageName: 'ubuntu-16.04'
+        python.version: '3.7'
+      Python37Windows:
+        imageName: 'vs2017-win2016'
+        python.version: '3.7'
+      Python37Mac:
+        imageName: 'macos-10.13'
         python.version: '3.7'
     maxParallel: 4
   pool:
