--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,11 @@ jobs:
         imageName: 'ubuntu-16.04'
         python.version: '2.7'
         LC_ALL: 'en_US.ascii'
+      Python27LinuxASCIIPython:
+        imageName: 'ubuntu-16.04'
+        python.version: '2.7'
+        LC_ALL: 'en_US.utf8'
+        PYTHONIOENCODING: 'ascii'
       Python27Windows:
         imageName: 'vs2017-win2016'
         python.version: '2.7'
