--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,11 +15,11 @@ jobs:
       Python27LinuxASCII:
         imageName: 'ubuntu-16.04'
         python.version: '2.7'
+        LANG: 'en_US.ascii'
         LC_ALL: 'en_US.ascii'
       Python27LinuxASCIIPython:
         imageName: 'ubuntu-16.04'
         python.version: '2.7'
-        LC_ALL: 'en_US.utf8'
         PYTHONIOENCODING: 'ascii'
       Python27Windows:
         imageName: 'vs2017-win2016'
