--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ jobs:
   - script: |
       env
       pip install pytest
-      python -m pytest wasabi
+      python -m pytest -s wasabi
     displayName: 'Run tests'
 
   - script: python setup.py sdist
