--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
         imageName: 'vs2017-win2016'
         python.version: '2.7'
       Python27Mac:
-        imageName: 'macos-10.14'
+        imageName: 'macOS-10.15'
         python.version: '2.7'
       Python36Linux:
         imageName: 'ubuntu-20.04'
@@ -34,7 +34,7 @@ jobs:
         imageName: 'vs2017-win2016'
         python.version: '3.6'
       Python36Mac:
-        imageName: 'macos-10.14'
+        imageName: 'macOS-10.15'
         python.version: '3.6'
       Python37Linux:
         imageName: 'ubuntu-20.04'
@@ -43,7 +43,7 @@ jobs:
         imageName: 'vs2017-win2016'
         python.version: '3.7'
       Python37Mac:
-        imageName: 'macos-10.14'
+        imageName: 'macOS-10.15'
         python.version: '3.7'
       Python38Linux:
         imageName: 'ubuntu-20.04'
@@ -52,7 +52,7 @@ jobs:
         imageName: 'vs2017-win2016'
         python.version: '3.8'
       Python38Mac:
-        imageName: 'macos-10.14'
+        imageName: 'macOS-10.15'
         python.version: '3.8'
       Python39Linux:
         imageName: 'ubuntu-20.04'
@@ -61,7 +61,7 @@ jobs:
         imageName: 'vs2017-win2016'
         python.version: '3.9'
       Python39Mac:
-        imageName: 'macos-10.14'
+        imageName: 'macOS-10.15'
         python.version: '3.9'
       Python310Linux:
         imageName: 'ubuntu-20.04'
