--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ jobs:
         python.version: '2.7'
         PYTHONIOENCODING: 'ascii'
       Python27Windows:
-        imageName: 'vs2017-win2016'
+        imageName: 'windows-2019'
         python.version: '2.7'
       Python27Mac:
         imageName: 'macOS-10.15'
@@ -31,7 +31,7 @@ jobs:
         imageName: 'ubuntu-20.04'
         python.version: '3.6'
       Python36Windows:
-        imageName: 'vs2017-win2016'
+        imageName: 'windows-2019'
         python.version: '3.6'
       Python36Mac:
         imageName: 'macOS-10.15'
@@ -40,7 +40,7 @@ jobs:
         imageName: 'ubuntu-20.04'
         python.version: '3.7'
       Python37Windows:
-        imageName: 'vs2017-win2016'
+        imageName: 'windows-2019'
         python.version: '3.7'
       Python37Mac:
         imageName: 'macOS-10.15'
@@ -49,7 +49,7 @@ jobs:
         imageName: 'ubuntu-20.04'
         python.version: '3.8'
       Python38Windows:
-        imageName: 'vs2017-win2016'
+        imageName: 'windows-2019'
         python.version: '3.8'
       Python38Mac:
         imageName: 'macOS-10.15'
@@ -58,7 +58,7 @@ jobs:
         imageName: 'ubuntu-20.04'
         python.version: '3.9'
       Python39Windows:
-        imageName: 'vs2017-win2016'
+        imageName: 'windows-2019'
         python.version: '3.9'
       Python39Mac:
         imageName: 'macOS-10.15'
@@ -67,7 +67,7 @@ jobs:
         imageName: 'ubuntu-20.04'
         python.version: '3.10'
       Python310Windows:
-        imageName: 'vs2017-win2016'
+        imageName: 'windows-2019'
         python.version: '3.10'
     maxParallel: 4
   pool:
