Separate steps for pytest and mypy

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,9 +70,15 @@ jobs:
       python -c "import locale; print('Preferred encoding:', locale.getpreferredencoding())"
       python -c "import sys; print('stdout encoding:', sys.stdout.encoding)"
       env
-      python -m mypy wasabi
       python -m pytest -s wasabi
     displayName: 'Run tests'
+
+  - script: |
+      python -c "import locale; print('Preferred encoding:', locale.getpreferredencoding())"
+      python -c "import sys; print('stdout encoding:', sys.stdout.encoding)"
+      env
+      python -m mypy wasabi
+    displayName: 'Run mypy'
 
   - script: python setup.py sdist
     displayName: 'Test sdist'
