Migrate codebase to support py36 and above (#22)
* Remove CI checks for py27

* Add type hints and remove py27 compat

In this commit, I added type hints to all public-facing
methods of the API. In addition, I also removed any traces of python2.7
compatibility (e.g., print_function, unicode checks, etc.)

For most of the docstrings, I updated 'unicode' -> 'str' just so that
it's clearer.

* Fix typing errors for diff_strings

* Ignore when we use **kwargs, but not named kwds

When this is removed, an "incompatible type" error message shows up.
I decided to just follow how spaCy does this in the following lines of
code:
- https://github.com/explosion/spaCy/blob/c90dd6f265e5cef84de3a2a935728898e20b94df/spacy/scorer.py#L134
- https://github.com/explosion/spaCy/blob/4c058eb40a1843191352a1501bead0dc99526bed/spacy/language.py#L1164

I'm cutting corners here so I want to document it properly. For now, if
we want to fully-solve this error, there are two ways:

1. I can just pass each parameter to the row() function instead of using
the **settings dictionary. I decided not to do this because I find the
**settings approach to be elegant (I don't want to sacrifice neatness
for static type correctness).

2. We can use TypedDicts. However, I don't see this approach being done
in spaCy, and I might need to refactor the code for a bit so this might
take more time.

Let me know if there's something obvious that I missed!

* Fix tables typing

* Fix dictionary getters by casting

Right now, functions such as icon, color, bg_color
have different types (str, int, etc.), and mypy gets confused
as to which one to use when we're doing some_dict.get(color, color)

What I did is to cast everything into string. One option is to do
overloads, but I don't think it's necessary for this method.

* Add typing_extensions to use Literal

* Run isort on all files

* Install dependencies in a separate step

* Remove unnecessary imports

* Add myp

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,24 +9,6 @@ jobs:
 - job: 'Test'
   strategy:
     matrix:
-      Python27Linux:
-        imageName: 'ubuntu-20.04'
-        python.version: '2.7'
-      Python27LinuxASCII:
-        imageName: 'ubuntu-20.04'
-        python.version: '2.7'
-        LANG: 'en_US.ascii'
-        LC_ALL: 'en_US.ascii'
-      Python27LinuxASCIIPython:
-        imageName: 'ubuntu-20.04'
-        python.version: '2.7'
-        PYTHONIOENCODING: 'ascii'
-      Python27Windows:
-        imageName: 'windows-2019'
-        python.version: '2.7'
-      Python27Mac:
-        imageName: 'macOS-10.15'
-        python.version: '2.7'
       Python36Linux:
         imageName: 'ubuntu-20.04'
         python.version: '3.6'
@@ -79,16 +61,21 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: python -m pip install --upgrade pip
+  - script: |
+      python -m pip install --upgrade pip
+      python -m pip install -r requirements.txt
     displayName: 'Install dependencies'
 
   - script: |
       python -c "import locale; print('Preferred encoding:', locale.getpreferredencoding())"
       python -c "import sys; print('stdout encoding:', sys.stdout.encoding)"
       env
-      pip install pytest
       python -m pytest -s wasabi
     displayName: 'Run tests'
+
+  - script: |
+      python -m mypy wasabi
+    displayName: 'Run mypy'
 
   - script: python setup.py sdist
     displayName: 'Test sdist'
