--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,46 +10,43 @@ jobs:
   strategy:
     matrix:
       Python36Linux:
-        imageName: 'ubuntu-20.04'
+        imageName: 'ubuntu-latest'
         python.version: '3.6'
       Python36Windows:
         imageName: 'windows-2019'
         python.version: '3.6'
-      Python36Mac:
-        imageName: 'macOS-10.15'
-        python.version: '3.6'
       Python37Linux:
-        imageName: 'ubuntu-20.04'
+        imageName: 'ubuntu-latest'
         python.version: '3.7'
       Python37Windows:
-        imageName: 'windows-2019'
+        imageName: 'windows-latest'
         python.version: '3.7'
       Python37Mac:
-        imageName: 'macOS-10.15'
+        imageName: 'macos-latest'
         python.version: '3.7'
       Python38Linux:
-        imageName: 'ubuntu-20.04'
+        imageName: 'ubuntu-latest'
         python.version: '3.8'
       Python38Windows:
-        imageName: 'windows-2019'
+        imageName: 'windows-latest'
         python.version: '3.8'
       Python38Mac:
-        imageName: 'macOS-10.15'
+        imageName: 'macos-latest'
         python.version: '3.8'
       Python39Linux:
-        imageName: 'ubuntu-20.04'
+        imageName: 'ubuntu-latest'
         python.version: '3.9'
       Python39Windows:
-        imageName: 'windows-2019'
+        imageName: 'windows-latest'
         python.version: '3.9'
       Python39Mac:
-        imageName: 'macOS-10.15'
+        imageName: 'macos-latest'
         python.version: '3.9'
       Python310Linux:
-        imageName: 'ubuntu-20.04'
+        imageName: 'ubuntu-latest'
         python.version: '3.10'
       Python310Windows:
-        imageName: 'windows-2019'
+        imageName: 'windows-latest'
         python.version: '3.10'
     maxParallel: 4
   pool:
