--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ zip_safe = true
 include_package_data = true
 python_requires = >=3.6
 install_requires =
-    colorama >= 0.4.6; sys_platform == "win32"
+    colorama >= 0.4.6; sys_platform == "win32" and python_version >= "3.7"
 
 [flake8]
 ignore = E203, E266, E501, E731, W503, E741
