--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,21 +7,13 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        os:
-          [
-            ubuntu-20.04,
-            ubuntu-latest,
-            windows-2019,
-            windows-latest,
-            macos-11,
-            macos-latest,
-          ]
-        python_version: [3.6, 3.7, 3.8, 3.9, 3.10, 3.11]
-        exclude:
+        os: [ubuntu-latest, windows-latest, macos-11, macos-latest]
+        python_version: [3.7, 3.8, 3.9, 3.10, 3.11]
+        include:
           - os: ubuntu-20.04
-            version: [3.7, 3.8, 3.9, 3.10, 3.11]
+            python_version: "3.6"
           - os: windows-2019
-            version: [3.7, 3.8, 3.9, 3.10, 3.11]
+            python_version: "3.6"
     runs-on: ${{ matrix.os }}
 
     steps:
