--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
       max-parallel: 4
       matrix:
         os: [ubuntu-latest, windows-latest, macos-11, macos-latest]
-        python_version: [3.7, 3.8, 3.9, 3.10, 3.11]
+        python_version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         include:
           - os: ubuntu-20.04
             python_version: "3.6"
