--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,9 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-11, macos-latest]
+        # TODO: keep it cheap while testing. Replace when ready to use the full array.
+        # os: [ubuntu-latest, windows-latest, macos-11, macos-latest]
+        os: [ubuntu-latest, ubuntu-18.04]
         python_version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         include:
           - os: ubuntu-20.04
@@ -20,12 +22,21 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Configure Python version
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python_version }}
           architecture: x64
           cache: "pip"
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
+
+      - name: Run pytest
+        run: |
+          python -c "import locale; print('Preferred encoding:', locale.getpreferredencoding())"
+          python -c "import sys; print('stdout encoding:', sys.stdout.encoding)"
+          env
+          python -m pytest -s wasabi
