--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,9 +7,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        # TODO: keep it cheap while testing. Replace when ready to use the full array.
-        # os: [ubuntu-latest, windows-latest, macos-11, macos-latest]
-        os: [ubuntu-latest, ubuntu-18.04]
+        os: [ubuntu-latest, windows-latest, macos-11, macos-latest]
         python_version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         include:
           - os: ubuntu-20.04
