--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-version = 1.1.1
+version = 1.1.2.dev0
 description = A lightweight console printing and formatting toolkit
 url = https://github.com/explosion/wasabi
 author = Explosion
