CI: Update GHA tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,20 +2,30 @@ name: tests
 
 on:
   push:
+    paths-ignore:
+      - "*.md"
   pull_request:
     types: [opened, synchronize, reopened, edited]
+    paths-ignore:
+      - "*.md"
+
+env:
+  MODULE_NAME: 'wasabi'
+  RUN_MYPY: 'true'
 
 jobs:
   tests:
+    name: Test
+    if: github.repository_owner == 'explosion'
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python_version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         include:
-          - os: ubuntu-20.04
-            python_version: "3.6"
           - os: windows-2019
+            python_version: "3.6"
+          - os: ubuntu-20.04
             python_version: "3.6"
     runs-on: ${{ matrix.os }}
 
@@ -28,22 +38,45 @@ jobs:
         with:
           python-version: ${{ matrix.python_version }}
           architecture: x64
-          cache: "pip"
 
-      - name: Install dependencies
+      - name: Build sdist
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-
-      - name: Run pytest
-        run: |
-          python -c "import locale; print('Preferred encoding:', locale.getpreferredencoding())"
-          python -c "import sys; print('stdout encoding:', sys.stdout.encoding)"
-          env
-          python -m pytest -s wasabi
+          python -m pip install -U build pip setuptools
+          python -m pip install -U -r requirements.txt
+          python -m build --sdist
 
       - name: Run mypy
-        run: python -m mypy wasabi
+        shell: bash
+        if: ${{ env.RUN_MYPY == 'true' }}
+        run: |
+          python -m mypy $MODULE_NAME
 
-      - name: Test sdist
-        run: python setup.py sdist
+      - name: Delete source directory
+        shell: bash
+        run: |
+          rm -rf $MODULE_NAME
+
+      - name: Uninstall all packages
+        run: |
+          python -m pip freeze > installed.txt
+          python -m pip uninstall -y -r installed.txt
+
+      - name: Install from sdist
+        shell: bash
+        run: |
+          SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
+          python -m pip install dist/$SDIST
+
+      - name: Test import
+        shell: bash
+        run: |
+          python -c "import $MODULE_NAME" -Werror
+
+      - name: Install test requirements
+        run: |
+          python -m pip install -U -r requirements.txt
+
+      - name: Run tests
+        shell: bash
+        run: |
+          python -m pytest --pyargs $MODULE_NAME -Werror
