don't import from typing_extensions or change reqs

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ include_package_data = true
 python_requires = >=3.6
 install_requires =
     colorama >= 0.4.6; sys_platform == "win32" and python_version >= "3.7"
-    typing_extensions>=3.7.4.1,<4.5.0
+    typing_extensions>=3.7.4.1,<4.5.0; python_version < "3.8"
 
 [flake8]
 ignore = E203, E266, E501, E731, W503, E741
