--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-typing_extensions>=3.7.4.1,<4.5.0
+typing_extensions>=3.7.4.1,<4.5.0; python_version < "3.8"
 # Development dependencies
 pytest
 mypy
