--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python_version: ["3.12"]
         include:
-          - os: ubuntu-latest
+          - os: windows-2019
             python_version: "3.6"
           - os: windows-latest
             python_version: "3.7"
